Added comments, checkstyle fixes, sonar fixes